adding architectural updates

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,11 @@ show_downloads: true
 project_wiki: https://github.com/sul-dlss/rialto/wiki
 project_issues: https://github.com/sul-dlss/rialto/issues
 
+site:
+  - github:
+    - owner_url: https://github.com/sul-dlss
+    - owner_label: SUL-DLSS
+
 # Build settings
 markdown: kramdown
 remote_theme: cmh2166/minimal-architect
